--- a/AdminLTE/login.html
+++ b/AdminLTE/login.html
@@ -55,10 +55,10 @@
 			</div>
 			<div class="card-footer">
 				<div class="d-flex justify-content-center links">
-					Don't have an account?<a href="#">Sign Up</a>
+					Don't have an account?<a href="#" >Sign Up</a>
 				</div>
-				<div class="d-flex justify-content-center">
-					<a href="#">Forgot your password?</a>
+				<div class="d-flex justify-content-center" style="background-color: rgba(0, 0, 0, 0.237);">
+					<a href="#" style="color: rgb(255, 255, 0)" >Forgot your password?</a>
 				</div>
 			</div>
 		</div>
